# nof0

./: .gitignore  ARCHITECTURE.md
backend/: ARCHITECTURE.md  BROKERS_IMPLEMENTATION_SUMMARY.md  BROKER_REFACTOR.md  Cargo.toml  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  SYSTEM_TRAY_IMPLEMENTATION.md  TOOL_CALLING.md  TRADING_ENGINE_INTEGRATION.md  TRAIT_ARCHITECTURE.md  build.rs
backend/config/: exchanges.yaml
backend/docs/: AGENT_PERSISTENCE.md  CTP_INTEGRATION_REFERENCE.md  TOOL_EXECUTOR.md  TOOL_EXECUTOR_SUMMARY.md
backend/etc/: ctp_config.yaml  risk_config.yaml
backend/examples/: broker_usage.rs  llm_demo.rs  multi_round_dialogue_demo.rs  persistent_agent_demo.rs  three_brokers_demo.rs  tool_calling_demo.rs  trading_assistant_demo.rs  trading_engine_demo.rs
backend/migrations/: 003_risk_management.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  mock_data.rs  server.rs  tray.rs
backend/src/brokers/: mock_broker.rs  mod.rs  types.rs
backend/src/brokers/binance/: broker.rs  mod.rs  types.rs
backend/src/brokers/ctp/: CTP_IMPLEMENTATION_SUMMARY.md  PROJECT_FINAL_SUMMARY.md  README.md  README_REAL_MODE.md  TASK_7_RECONNECTION_SUMMARY.md  adapter.rs  broker.rs  error_codes.rs  md_spi.rs  mod.rs  real_connection.rs  trader_spi.rs  types.rs  web_api.rs
backend/src/brokers/okex/: broker.rs  mod.rs  types.rs
backend/src/config/: brokers.rs  mod.rs
backend/src/engine/: agent.rs  agent_store.rs  executor.rs  mod.rs  scheduler.rs  tool_executor.rs  trading.rs
backend/src/llm/: mod.rs  provider.rs  rig_provider.rs
backend/src/markets/: adapter.rs  mod.rs
backend/src/mcp/: mod.rs  server.rs  tools.rs  transport.rs  types.rs
backend/src/risk/: config.rs  manager.rs  metrics.rs  mod.rs  rules.rs
markdown/: CTP_ADAPTER.md  (+6 more)
(+47 files in other folders)
