[package]
name = "nof0-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0.17"
async-trait = "0.1"
winit = "0.30.12"
# Web框架
axum = { version = "0.8.6", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# HTTP & WebSocket
http = "1.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "json",
] }
tokio-tungstenite = "0.28.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3.31"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 静态文件
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2.0"

# 工具
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# 系统托盘
tray-icon = "0.21.2"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

# 数据库 (可选, 暂未启用)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }

# 缓存 (可选, 暂未启用)
# redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Windows下隐藏控制台窗口（仅Release模式）
[profile.release]
strip = true
lto = true

[[bin]]
name = "nof0-backend"
path = "src/main.rs"

[lib]
name = "nof0_backend"
path = "src/lib.rs"
